Correction du bug du z-index sur le menu déroulant de la home, début de refection des pages skipper

--- a/src/AppBundle/Resources/public/css/home.css
+++ b/src/AppBundle/Resources/public/css/home.css
@@ -4,7 +4,7 @@
 .container-home .container-body {background-color: #EFF1F2;}
 .panel-info>.panel-heading { background: #39b3d7; color: white;border: 1px solid #269abc; }
 .container-search { position: relative; z-index: 1; }
-.container-header { position: relative; z-index: 1; width: 100% }
+.container-header { position: relative; z-index: 100; width: 100% }
 
 h1 {position: relative; z-index: 1; background: #5bc0de; border-top: 1px solid #B3B3B3; border-bottom: 1px solid #B3B3B3; text-align: center; clear: both; color: white; font-size: 3em; margin: 10px 0; padding: 10px; box-shadow: 0px 0px 30px black;
 text-shadow: 1px 0 0 black, -1px 0 0 black, 0 1px 0 black, 0 -1px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
